--- a/portafolio/index.html
+++ b/portafolio/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="./src/assets/hydro.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alma Sorbera</title>
+    <title>Ana Martinez</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lilita+One&family=Londrina+Sketch&display=swap" rel="stylesheet">
